code clean (getopt), added option to prefix each text line with timestamp

--- a/tools/serial/Makefile
+++ b/tools/serial/Makefile
@@ -1,6 +1,11 @@
 SERIALDUMP := serialdump
 
+CFLAGS += -Wall -W -g -pedantic
+
 all:	$(SERIALDUMP)
 
+clean:
+	-$(RM) $(SERIALDUMP)
+
 $(SERIALDUMP):	serialdump.c
-	$(CC) -o $@ $<
+	$(CC) $(CFLAGS) -o $@ $<
