--- a/platform/z1/Makefile.common
+++ b/platform/z1/Makefile.common
@@ -54,7 +54,6 @@ IHEXFILE=tmpimage.ihex
 ifeq ($(HOST_OS),Darwin)
   ifndef MOTELIST
       USBDEVPREFIX=
-      SERIALDUMP = $(CONTIKI)/tools/sky/serialdump-linux
       MOTELIST = $(CONTIKI)/tools/z1/motelist-z1-macos
       BSL = $(CONTIKI)/tools/z1/z1-bsl-nopic --z1
       BSL_FILETYPE = -I
@@ -66,7 +65,6 @@ else
   # If we are not running under Mac, we assume Linux
     ifndef MOTELIST
       USBDEVPREFIX=
-      SERIALDUMP = $(CONTIKI)/tools/sky/serialdump-linux
       MOTELIST = $(CONTIKI)/tools/z1/motelist-z1
       BSL = $(CONTIKI)/tools/z1/z1-bsl-nopic --z1
       BSL_FILETYPE = -I
@@ -139,22 +137,24 @@ linslip: $(CONTIKI)/tools/tunslip
 $(CONTIKI)/tools/tunslip:
 	(cd $(CONTIKI)/tools; $(MAKE) tunslip)
 
+include $(CONTIKI)/tools/serial/Makefile.serial
+
 ifdef MOTE
-serialdump:
+serialdump:	$(SERIALDUMP)
 	$(SERIALDUMP) -b115200 $(USBDEVPREFIX)$(word $(MOTE), $(CMOTES)) | $(CONTIKI)/tools/timestamp | tee serialdump-`date +%Y%m%d-%H%M`
 
-serialview:
+serialview:	$(SERIALDUMP)
 	$(SERIALDUMP) -b115200 $(USBDEVPREFIX)$(word $(MOTE), $(CMOTES)) | $(CONTIKI)/tools/timestamp
 
-login:
+login:	$(SERIALDUMP)
 	$(SERIALDUMP) -b115200 $(USBDEVPREFIX)$(word $(MOTE), $(CMOTES))
 else
-serialdump:
+serialdump:	$(SERIALDUMP)
 	$(SERIALDUMP) -b115200 $(USBDEVPREFIX)$(firstword $(CMOTES)) | $(CONTIKI)/tools/timestamp | tee serialdump-`date +%Y%m%d-%H%M`
 
-serialview:
+serialview:	$(SERIALDUMP)
 	$(SERIALDUMP) -b115200 $(USBDEVPREFIX)$(firstword $(CMOTES)) | $(CONTIKI)/tools/timestamp
 
-login:
+login:	$(SERIALDUMP)
 	$(SERIALDUMP) -b115200 $(USBDEVPREFIX)$(firstword $(CMOTES))
 endif
